--- a/templates/base.html
+++ b/templates/base.html
@@ -99,6 +99,7 @@
     </div>
 
     <div id="links_menu_lat" class="links-container">
+      <a href="{% url 'info'%}">Informações</a>
       {% if user.is_authenticated %}
         <a href="{% url 'perfil'%}">Perfil</a>
         <a href="{% url 'index'%}">Geral</a>
