--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -154,10 +154,11 @@
             <textarea id="observacoes" name="observacoes" rows="5" cols="120" maxlength="3000" 
               {% if edicao and liberadas_propostas %}disabled{% endif %}>{% if proposta.observacoes and proposta.observacoes != None and proposta.observacoes != "None" %}{{proposta.observacoes}}{% endif %}</textarea>
 
-            <label class="topico" for="arquivo">Anexos
-            <input id="arquivo" name="arquivo" {% include "formatos_suportados.html" %} type="file">
+            <label class="topico" for="arquivo">Anexos</label>
+            {% include "selecionar_arquivo.html" with arquivo_nome="arquivo" arquivo_accept="text/plain, application/pdf, application/zip, application/x-zip, application/x-zip-compressed, .zip, .rar, .7zip, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-powerpoint, application/vnd.openxmlformats-officedocument.presentationml.presentation, image/*, video/mp4, video/x-m4v, video/webm, video/x-matroska, video/*, .mkv" %}
+
             <small class="obs">arquivo que contenha informações adicionais para os estudantes analisarem sobre o projeto (opcional)</small>
-            </label>
+            
             {% if proposta.anexo %}
               <br><small>Arquivo atual:
                 <a href="{{request.scheme}}://{{request.get_host}}{{proposta.anexo.url}}">{{proposta.get_anexo}}</a>
