--- a/estudantes/templates/estudantes/relato_quinzenal.html
+++ b/estudantes/templates/estudantes/relato_quinzenal.html
@@ -14,7 +14,6 @@
   <script src="{% static 'js/aviso_perda_edicao.js' %}"></script>
 
   <style>
-    textarea {max-width:100%;}
 
     table {
       border-collapse: separate;
@@ -53,7 +52,11 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{titulo}}</span>
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en" style="display: none;">{{ titulo.en }}</span>
+  </span>
   <br>
 
   {% if mensagem %}
@@ -64,45 +67,60 @@
 
     {% if prazo %}
       {% if fora_periodo %}
-        Fora do período para a submissão de relatos.<br>
-        Próxima entrega será entre<b style='color:green;'>
+        <span lang="pt">Fora do período para a submissão de relatos.</span>
+        <span lang="en" style="display: none;">Out of the period for submitting reports.</span>
+        <br>
+        <span lang="pt">Próxima entrega será entre</span>
+        <span lang="en" style="display: none;">Next delivery will be between</span>
+        <b style='color:green;'>
           <span class="opt_full">{{inicio_periodo|date:"DATE_FORMAT" }}</span>
           <span class="opt_short">{{inicio_periodo|date:"d/m/y" }}</span>
         </b>
-        e
+        <span lang="pt">e</span>
+        <span lang="en" style="display: none;">and</span>
         <b style='color:green;'>
           <span class="opt_full">{{prazo.endDate|date:"DATE_FORMAT" }}</span>
           <span class="opt_short">{{prazo.endDate|date:"d/m/y" }}</span>
         </b>
       {% else %}
-        Prazo para a submissão do relato: <b style='color:red;'>
+        <span lang="pt">Prazo para a submissão do relato:</span>
+        <span lang="en" style="display: none;">Deadline for submitting the report:</span>
+        <b style='color:red;'>
           <span class="opt_full">{{prazo.endDate|date:"DATE_FORMAT" }}</span>
           <span class="opt_short">{{prazo.endDate|date:"d/m/y" }}</span>
         </b>
       {% endif %}
     {% else %}
-      Não há datas para fazer relatos.
+      <span lang="pt">Não há datas para fazer relatos.</span>
+      <span lang="en" style="display: none;">There are no dates to make reports.</span>
     {% endif %}
     
     <br><br>
 
-    <label for="relato">Informe seu relato quinzenal (máximo {% max_length Relato "texto" %} caracteres)</label><br>
+    <label for="relato">
+      <span lang="pt">Informe seu relato quinzenal (máximo {% max_length Relato "texto" %} caracteres)</span>
+      <span lang="en" style="display: none;">Report your biweekly report (maximum {% max_length Relato "texto" %} characters)</span>
+    </label><br>
     <textarea id="relato" name="relato" rows="18" cols="160" maxlength="{% max_length Relato "texto" %}" {% if fora_periodo or not prazo %}disabled{% endif %} 
               placeholder="{{msg_relato_quinzenal}}"
       >{% if texto_relato.texto %}{{texto_relato.texto}}{% endif %}</textarea>
     
     <br><br>
-    <input {% if fora_periodo or not prazo %}disabled{% endif %} class="btn btn-primary mb-1" type="submit" value="Enviar">
+
+    <button {% if fora_periodo or not prazo %}disabled{% endif %} class="btn btn-primary mb-1" type="submit">
+      <span lang="pt">Enviar</span>
+      <span lang="en" style="display: none;">Send</span>
+    </button>
 
   </form>
 
   {% if relatos %}
 
-    <p>&nbsp;</p>
-    <hr>
-    <p>&nbsp;</p>
+    <p>&nbsp;</p><hr><p>&nbsp;</p>
 
-    <h4>Relatos Anteriores:</h4>
+    <h4 lang="pt">Relatos Anteriores:</h4>
+    <h4 lang="en">Previous Reports:</h4>
+
     {% for item in relatos %}
     
       {% with prazo=item|get_prazo %}
@@ -113,28 +131,52 @@
           <thead><tr><th>
             {% if prazo %}
               {{prazo}} -
-              <span style="white-space: nowrap;">Situação: 
-                {% if item.avaliacao == -1 %}aguardando avaliação de orientador{% endif %}
-                {% if item.avaliacao == 0 %}<span class="red-bold">desempenho abaixo do esperado</span>{% endif %}
-                {% if item.avaliacao == 1 %}<span class="green-bold">desempenho dentro do esperado</span>{% endif %}
+              <span style="white-space: nowrap;">
+                <span lang="pt">Situação: </span>
+                <span lang="en" style="display: none;">Situation: </span>
+                {% if item.avaliacao == -1 %}
+                  <span lang="pt">aguardando avaliação de orientador</span>
+                  <span lang="en" style="display: none;">awaiting advisor evaluation</span>
+                {% endif %}
+                {% if item.avaliacao == 0 %}<span class="red-bold">
+                  <span lang="pt">desempenho abaixo do esperado</span>
+                  <span lang="en" style="display: none;">performance below expected</span>
+                </span>{% endif %}
+                {% if item.avaliacao == 1 %}<span class="green-bold">
+                  <span lang="pt">desempenho dentro do esperado</span>
+                  <span lang="en" style="display: none;">performance within expected</span>
+                </span>{% endif %}
               </span>
             {% else %}
-              Prazo inválido (não visível para orientador)
+              <span lang="pt">Prazo inválido (não visível para orientador)</span>
+              <span lang="en" style="display: none;">Invalid deadline (not visible to advisor)</span>
             {% endif %}
             {% if item.feedback %}
               {% if item.momento_avaliacao %}
-                <i style="display: block;">Feedback do Orientador: {{item.momento_avaliacao}}</i>
+                <i style="display: block;">
+                  <span lang="pt">Feedback do Orientador:</span>
+                  <span lang="en" style="display: none;">Advisor Feedback:</span>
+                  {{item.momento_avaliacao}}</i>
               {% endif %}
               <div id="relato{{item.id}}" class="relato">{{item.feedback|linebreaks}}</div>
             {% endif %}
           </th></tr></thead>
           <tbody><tr><td>
-            <i>Entregue: {{item.momento}}</i><br>
+            <i>
+              <span lang="pt">Entregue:</span>
+              <span lang="en" style="display: none;">Delivered:</span>
+              {{item.momento}}
+            </i><br>
             <div class="relato">{{item.texto|linebreaks}}</div>
           </td></tr>
         {% else %}
           <tr><td>
-            <i class="anteriores" style="display: block;">Entregue: {{item.momento}}  <span class="seta-cima"></span></i>
+            <i class="anteriores" style="display: block;">
+              <span lang="pt">Entregue:</span>
+              <span lang="en" style="display: none;">Delivered:</span>
+              {{item.momento}}
+              <span class="seta-cima"></span>
+            </i>
             <div id="relato{{item.id}}" style="display: none;" class="relato">{{item.texto|linebreaks}}</div>
           </td></tr>
         {% endifchanged %}
@@ -154,5 +196,7 @@
   <script>
     aviso_perda_edicao("form", "Você tem alterações não salvas. Tem certeza que deseja sair?");
   </script>
+
+  {% comment %} {% include "linguas.html" %} {% endcomment %}
 
 {% endblock %}
